develop some more sections and few adjusts

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MC Gerador de Cards</title>
+  <title>Vale - Acordo de reparação por Brumadinho</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="css/style.css?v=1" />
   <link rel="stylesheet" href="css/responsive.css?v=1" />
   <link rel="stylesheet" href="css/barra-globocom.min.css?v=1">
   <link rel="stylesheet" href="css/barra.css?v=1">
   <link rel="stylesheet" href="css/bootstrap.min.css?v=1">
-  <link href="./css/owl.carousel.min.css" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -46,9 +47,9 @@
         </div>
         <div class="col-lg-2">
         </div>
-        <div class="col-lg-12">          
+        <div class="col-lg-12">
           <div class="imagem justify-content-center">
-            <a href="quotes" class="btn-entenda">
+            <a href="#quotes" class="btn-entenda">
               <img class="chevron pointer" src="./img/down-chevron-svgrepo-com.svg" alt="">
               <span>Entenda</span>
             </a>
@@ -56,49 +57,84 @@
         </div>
       </div>
     </div>
-    <div class="quotes">
-      
+  </div>
+  <div class="bg-gray">
+    <div id="quotes" class="quotes container">
+      <div class="row">
+        <div class="col-lg-2 col-md-12"></div>
+        <div class="col-lg-8 col-md-12 text-center first-cite">
+          <p>Em fevereiro de 2021, a Vale firmou um acordo junto ao Governo de Minas Gerais, ao Ministério Público
+            Federal e
+            Estatual e à Defensoria Publica para <span class="b-red"> reparar e compensar os danos coletivos causados
+              pelo rompimento da barragem B1,</span> em Brumadinho.
+          </p>
+          <p class="mt-5">O Acordo Judicial de Reparação Integral prevê que a mineradora desembolse um total de R$ 37,7
+            bilhões. Deste
+            valor, R$ 18,5 bilhões já foram executados pela Vale.
+          </p>
+        </div>
+        <div class="col-lg-2 col-md-12"></div>
+      </div>
+      <div class="row">
+        <div class="col-lg-1 col-md-12"></div>
+        <div class="col-lg-10 offset-lg-2">
+          <div class="text-center first-cite d-flex second-cite">
+            <i class="start-quote fas fa-quote-left"></i>
+            <blockquote>O Acordo trouxe mais transferência, fiscalização e legitimidade às ações de reparação que já
+              vinham
+              sendo feitas desde 2019 e estendeu a compensação para todo o estado, priorizando Brumadinho e 25
+              municípios impactados
+              na bacia do rio Paraopeba. Por meio da escuta de moradores, prefeituras, secretárias e defensoria pública,
+              temos o
+              propósito de realizar mudanças duradouras e efetivas que contribuam para a melhora da qualidade de vida
+              das pessoas"
+            </blockquote>
+          </div>
+          <div class="text-center first-cite author">
+            <cite> <b>Gleuza Jesué</b>, diretora de Reparação e Desenvolvimento da Vale</cite>
+          </div>
+        </div>
+        <div class="col-lg-1 col-md-12"></div>
+      </div>
     </div>
   </div>
-  <div class="footer py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-1 col-md-2 col-sm-2 col-3 logo_mc">
-          <img src="./img/04. Footer/Logo Méqui.png" alt="">
-        </div>
-        <div class="col-md-9 offset-md-1 col-lg-5 offset-lg-2 col-9 d-flex align-items-center">
-          <img class="bonecos" src="./img/04. Footer/Bonecos.png" alt="">
-          <div class="texto">
-            <p style="font-weight: 600;">Mandou bem na escolha! Pra dividir um Mega do Méqui tem que ser brother mesmo.
-            </p>
-            <a href="" class="">Ver mais</a>
+  <div class="imagem2 position-relative"></div>
+  <!-- <div class="container">
+    <div class="row">
+      <div class="col-lg-1"></div>
+      <div class="col-lg-10 bg-white acordo-abs position-absolute">
+        <p>sdaasdas</p>
+      </div>
+      <div class="col-lg-1"></div>
+    </div>
+  </div> -->
+
+  <div class="bg-gray">
+    <div class="container projetos text-center">
+      <div class="row d-flex justify-content-center">
+        <!--Grid column-->
+        <div class="col-md-12">
+          <h2 class="py-5">Os projetos na prática</h2>
+          <p>Veja algumas ações realizadas pela Vale que estão em andamento ou já foram executadas</p>
+          <div class="projetos_content">
+            <img class="w-100" src="/img/imagem_3.png" alt="">
           </div>
-        </div>
-        <div class="col-lg-3 col-md-12 offset-lg-1 align-items-center">
-          <div class="up d-flex ">
-            <img src="./img/04. Footer/Hamburger.png" alt="">
-            <div class="texto pl-2">
-              <p>Mostra pra galera quem mataria a fome de Méqui com você</p>
+          <div class="row justify-content-between">
+            <div class="col-lg-3 px-2 bg-white">
+              <img src="/img/ìcones_Grade/grade-1.png" alt="">
             </div>
-          </div>
-          <div class="social_media d-flex align-items-center justify-content-lg-around">
-            <a target="_blank" class="pointer"
-              href="https://www.facebook.com/sharer/sharer.php?u=https://especial.gshow.globo.com/especial-publicitario/bbb/mequi/gerador-de-cards">
-              <img src="./img/04. Footer/Facebook.png" alt="">
-            </a>
-            <a target="_blank" class="pointer"
-              href="https://twitter.com/intent/tweet?url=https://especial.gshow.globo.com/especial-publicitario/bbb/mequi/gerador-de-cards&text=">
-              <img src="./img/04. Footer/Twitter.png" alt="">
-            </a>
-            <a target="_blank" class="pointer"
-              href="mailto:info@example.com?&subject=&cc=&bcc=&body=https://especial.gshow.globo.com/especial-publicitario/bbb/mequi/gerador-de-cards">
-              <img src="./img/04. Footer/Email.png" alt="" />
-            </a>
+            <div class="col-lg-3 bg-white">
+              <img src="/img/ìcones_Grade/grade-2.png" alt="">
+            </div>
+            <div class="col-lg-3 bg-white">
+              <img src="/img/ìcones_Grade/grade-3.png" alt="">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
 </body>
 
 <script src="./js/jquery.min.js"></script>
