--- a/index.html
+++ b/index.html
@@ -123,25 +123,249 @@
     </div>
   </div>
 
-  <div class="bg-gray">
+  <!-- dotto -->
+  <div class="container fluxo text-center py-5">
+    <div class="row d-flex justify-content-center">
+      <!--Grid column-->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <h2 class="py-5">Fluxo dos projetos sociais para os municípios impactados</h2>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>1.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-1.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Consulta popular realizada pelos compromitentes de 05 a 22 de novembro de 2021</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>2.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-2.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Consolidação dos resultados pelos compromitentes</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>3.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-3.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Definição e divulgação da lista de projetos pelos compromitentes</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>4.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-4.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Detalhamento do(s) projeto(s) pela Vale. <span class="fluxo-item-iniciativas">143
+                    iniciativas</span></span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>5.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-5.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Análise do(s) detalhamento(s) pela auditoria e aprovação pelos compromitentes</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>6.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-6.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Compromitentes aprovam projeto(s) para execução</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row fluxo-item d-flex py-2">
+          <div class="col-2 d-flex">
+            <div class="fluxo-item-number">
+              <p>7.</p>
+            </div>
+          </div>
+          <div class="col-10 fluxo-item-border">
+            <div class="row">
+              <div class="col-3 fluxo-col-3">
+                <img src="img/ìcones_Gráfico_3/gráfico_3-7.png" class="w-100 fluxo-item-icon" />
+              </div>
+              <div class="col-9 d-flex">
+                <span>Vale realiza a execução do(s) projeto(s)</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
+
+  <div class="bg-gray py-5">
     <div class="container projetos text-center">
       <div class="row d-flex justify-content-center">
         <!--Grid column-->
-        <div class="col-md-12">
-          <h2 class="py-5">Os projetos na prática</h2>
-          <p>Veja algumas ações realizadas pela Vale que estão em andamento ou já foram executadas</p>
-          <div class="projetos_content">
-            <img class="w-100" src="/img/imagem_3.png" alt="">
+        <div class="col-lg-12">
+          <h2 class="mt-3">Os projetos na prática</h2>
+          <p class="pp py-3">Veja algumas ações realizadas pela Vale que estão em andamento ou já foram executadas
+          </p>
+
+          <div class="row">
+            <div class="projetos_content col-12 mt-5 mb-5">
+              <img class="w-100" src="img/imagem_3.png" alt="">
+            </div>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-lg-3 px-2 bg-white">
-              <img src="/img/ìcones_Grade/grade-1.png" alt="">
+
+          <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-1.png" class="projeto-icon" alt="">
+                  <p>Entrega de <span class="orange">75 equipamentos</span> para manutenção de estradas rurais em 25
+                    municípios</p>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-3 bg-white">
-              <img src="/img/ìcones_Grade/grade-2.png" alt="">
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-2.png" class="projeto-icon" alt="">
+                  <p>Estruturação de <span class="orange">salas de emergência</span> em Brumadinho e bacia do Paraopeba
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-3 bg-white">
-              <img src="/img/ìcones_Grade/grade-3.png" alt="">
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-3.png" class="projeto-icon" alt="">
+                  <p>Oferta de quase <span class="orange">seis mil vagas</span> para qualificação profissional</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-4.png" class="projeto-icon" alt="">
+                  <p>Ações de fortalecimento da <span class="orange">Saúde Básica e Psicossocial</span></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-5.png" class="projeto-icon" alt="">
+                  <p>Construção de <span class="orange">1.500 moradias populares</span> e <span class="orange">7
+                      creches</span></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-6.png" class="projeto-icon" alt="">
+                  <p>Instalação de <span class="orange">78 usinas fotovoltaicas</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-7.png" class="projeto-icon" alt="">
+                  <p>Construção de <span class="orange">um pelotão</span> para o Corpo de Bombeiros em Brumadinho</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-8.png" class="projeto-icon" alt="">
+                  <p><span class="orange">Brumadinho Digital</span> tornando a cidade mais conectada</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col py-4">
+              <div class="card bg-white rounded-4 h-100">
+                <div class="d-flex flex-column h-100 py-3 px-4 text-center">
+                  <img src="img/ìcones_Grade/grade-9.png" class="projeto-icon" alt="">
+                  <p><span class="orange">Distrito Industrial</span>, para atração de novos negócios e geração de
+                    emprego e renda</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -149,6 +373,138 @@
     </div>
   </div>
 
+  <!-- dotto -->
+  <div class="container repasses text-center py-5">
+    <div class="row d-flex justify-content-center">
+      <!--Grid column-->
+      <div class="col-lg-12">
+        <h2 class="mt-5">Repasses da Vale alcançam quase R$ 12 bilhões</h2>
+        <p class="pp py-3">Cumprindo as obrigações a pagar previstas no acordo, a Vale já realizou depósito em
+          juízo de cerca de R$ 12 bilhões. Esses recursos estão sendo utilizados em diversas ações. Veja algumas:
+        </p>
+      </div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-1.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Recuperação e pavimentação de <span class="vermelho">17 trechos de estradas</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-2.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Obras em <span class="vermelho">três hospitais</span> de Belo Horizonte</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-3.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Equipamentos de <span class="vermelho">radiocomunicação</span> para Polícia Militar</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-4.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Repasse do Estado de <span class="vermelho">R$ 1,5 bilhão aos 853 municípios mineiros,</span> divididos conforme o número de habitantes</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-5.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Implantação do Programa de Transferência de Renda (PTR), solução definitiva para os pagamentos emergenciais aos atingidos. O saldo transferido foi de <span class="vermelho">R$ 4,4 bilhões</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-6.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span><span class="vermelho">Contratação temporária</span> de pessoal</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-7.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span><span class="vermelho">Projetos de Segurança Hídrica</span> para realizar obras que garantam o abastecimento da região metropolitana de BH</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+
+    <div class="row d-flex justify-content-center py-2">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <div class="row repasses-item d-flex py-2">
+          <div class="col-2 repasses-col-3">
+            <img src="img/Ícones_Lista/lista-8.png" class="w-100 repasses-item-icon" />
+          </div>
+          <div class="col-10 d-flex">
+            <span>Entrega de equipamentos para a <span class="vermelho">Defesa Civil</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </div>
 </body>
 
 <script src="./js/jquery.min.js"></script>
