ajustes nos gráficos

--- a/index.html
+++ b/index.html
@@ -109,15 +109,48 @@
     </div>
   </div> -->
   <div>
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center position-relative">
       <div class="col-lg-2 col-sm-0"></div>
-      <div class="col-lg-8 col-sm-12" style="position: relative;">
+      <div class="col-lg-8 col-sm-12 bg-white acordo-abs" style="position: relative;">
+        <div class="title_acordo my-5">
+          <h2>Estrutura do Acordo</h2>
+          <p>O acordo define partes diferenciadas por Obrigações a Fazer da Vale (quando a empresa paga e executa), 
+            e Obrigações de Pagar da Vale (empresa custeia, mas a gestão e execução é feita pelo Governo) e recursos já 
+            executados com medidas emergenciais. Entenda:</p>
+        </div>
+        
         <div class="fazer">
           <div class="btn-fazer">
             <span class="span-fazer">+</span>
           </div>
         </div>
+        <div class="fazer2">
+          <div class="btn-fazer2">
+            <span class="span-fazer2">+</span>
+          </div>
+        </div>
         <img src="img/gráfico_1.png" class="w-100" />
+        <div class="title_acordo my-5">
+          <h2>Execução Financeira</h2>
+          <img src="img/gráfico_2.png" class="w-100" />
+        </div>
+        <div class="title_acordo my-5">
+          <h2 style="padding: 6rem 4rem 0rem;">Municípios impactados recebem primeiros projetos</h2>
+          <p class="text-bold">Ações focam em saúde, infraestrutura e diversificação econômica</p>
+        </div>
+        <div class="first-cite">
+          <p>Os municípios impactados pelo rompimento começaram a receber as primeiras entregas previstas no acordo, 
+            referentes a <b>projetos realizados pela Vale.</b> Setenta e cinco equipamentos para manutenção de estradas rurais 
+            estão sendo entregues, como tratores e retroescavadeiras, sendo três para cada um dos 25 municípios da Bacia 
+            do rio Paraopeba. Para aprimoramento da Saúde pública, Brumadinho e os demais municípios impactados estão 
+            recebendo equipamentos para estruturação de Salas de Emergências em Unidade de Pronto Atendimento (UPA).
+          </p>
+          <p class="mt-5">Ao todo, <b>R$ 4 bilhões</b> serão destinados a projetos sociais para os 26 municípios impactados, 
+            sendo <b>R$ 1,5 bilhão</b> exclusivamente para Brumadinho. Em novembro de 2021, foi realizada uma consulta popular 
+            para ouvir as demandas dos moradores. Mais de 10 mil pessoas participaram.
+          </p>
+        </div>
+
       </div>
       <div class="col-lg-2 col-sm-0"></div>
     </div>
