--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
           <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-1.png" class="projeto-icon" alt="">
                   <p>Entrega de <span class="orange">75 equipamentos</span> para manutenção de estradas rurais em 25
@@ -323,7 +323,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-2.png" class="projeto-icon" alt="">
                   <p>Estruturação de <span class="orange">salas de emergência</span> em Brumadinho e bacia do Paraopeba
@@ -333,7 +333,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-3.png" class="projeto-icon" alt="">
                   <p>Oferta de quase <span class="orange">seis mil vagas</span> para qualificação profissional</p>
@@ -344,7 +344,7 @@
 
           <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-4.png" class="projeto-icon" alt="">
                   <p>Ações de fortalecimento da <span class="orange">Saúde Básica e Psicossocial</span></p>
@@ -353,7 +353,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-5.png" class="projeto-icon" alt="">
                   <p>Construção de <span class="orange">1.500 moradias populares</span> e <span class="orange">7
@@ -363,7 +363,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-6.png" class="projeto-icon" alt="">
                   <p>Instalação de <span class="orange">78 usinas fotovoltaicas</span></p>
@@ -374,7 +374,7 @@
 
           <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-7.png" class="projeto-icon" alt="">
                   <p>Construção de <span class="orange">um pelotão</span> para o Corpo de Bombeiros em Brumadinho</p>
@@ -383,7 +383,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-8.png" class="projeto-icon" alt="">
                   <p><span class="orange">Brumadinho Digital</span> tornando a cidade mais conectada</p>
@@ -392,7 +392,7 @@
             </div>
 
             <div class="col py-4">
-              <div class="card bg-white rounded-4 h-100">
+              <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-9.png" class="projeto-icon" alt="">
                   <p><span class="orange">Distrito Industrial</span>, para atração de novos negócios e geração de
