--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <img src="img/gráfico_1.png" class="w-100" />
         <div class="title_acordo my-5">
           <h2>Execução Financeira</h2>
-          <img src="img/gráfico_2.png" class="w-100" />
+          <img src="img/gráfico_2.png" class="w-100 grafico2" />
         </div>
         <div class="title_acordo my-5">
           <h2 style="padding: 6rem 4rem 0rem;">Municípios impactados recebem primeiros projetos</h2>
@@ -150,7 +150,17 @@
             para ouvir as demandas dos moradores. Mais de 10 mil pessoas participaram.
           </p>
         </div>
-
+        <div class="text-center first-cite d-flex second-cite">
+          <i class="start-quote fas fa-quote-left"></i>
+          <blockquote>O processo de escuta dos moradores é fundamental para que a reparação seja efetiva. 
+            A partir dessas escolhas, os compromitentes organizam e avaliam as demandas, a Vale faz um planejamento 
+            com cronogramas e orçamentos de cada projeto, que serão auditados antes de executarmos, e fiscalizados 
+            para que sejam cumpridos no prazo correto”
+          </blockquote>
+        </div>
+        <div class="text-center first-cite author">
+          <cite> <b>Gleuza Jesué</b>, diretora de Reparação e Desenvolvimento da Vale</cite>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-0"></div>
     </div>
