--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               O Acordo trouxe mais transparência, fiscalização e legitimidade às ações de reparação que já vinham sendo
               feitas desde 2019, incluindo ações de reparação e de compensação para o estado de Minas Gerais, além de
               priorizar Brumadinho e 25 municípios impactados na bacia do rio Paraopeba. Temos o propósito de realizar
-              mudanças duradouras e efetivas que contribuam para melhoria da qualidade de vida das pessoas"
+              mudanças duradouras e efetivas que contribuam para melhoria da qualidade de vida das pessoas”
             </blockquote>
           </div>
           <div class="row mt-3">
@@ -115,8 +115,7 @@
           <div class="container">
             <button id="close-modal-fazer" class="btn-close"></button>
             <div class="fazer-content">
-              <ul>
-                <li class="no-bullet">Ações de compensação e reparacão nos territórios afetados</li>
+              <ul>                
                 <li>Programa de Reparação Socioeconômica*</li>
                 <li class="no-bullet">Projetos para Brumadinho (R$ 1,5 Bi)</li>
                 <li class="no-bullet">Projetos para Bacia do Paraopeba (R$ 2,5 Bi)</li>
@@ -133,7 +132,7 @@
           <div class="container">
             <button id="close-modal-pagar" class="btn-close"></button>
             <div class="fazer-content">
-              <ul>Ações compensatórias em todo o estado de MG
+              <ul>
                 <li>Demandas das Comunidades Atingidas (R$ 3 Bi, sendo R$ 1 Bi para microcrédito)</li>
                 <li>Programa de Transferência de Renda (R$ 4,4 Bi)</li>
                 <li>Projetos de Segurança Hídrica/Saneamento (R$ 2 Bi)</li>
@@ -147,8 +146,8 @@
             </div>
           </div>
         </div>
-        <div style="position: relative;" class="mt-5 mb-2">
-          <img src="img/gráfico_1.png" class="w-100" data-aos="fade-up" />
+        <div class="justify-content-center d-flex" style="position: relative;" class="mt-5 mb-2">
+          <img src="img/gráfico_1.png" class="w-100 grafico" data-aos="fade-up" />
           <div class="fazer">
 
           </div>
@@ -158,7 +157,9 @@
         </div>
         <div class="title_acordo my-5">
           <h2 data-aos="fade-up">Execução Financeira</h2>
-          <img src="img/gráfico_2.png" class="w-100 mb-5" data-aos="fade-up" />
+          <div class="justify-content-center d-flex" style="position: relative;" class="mt-5 mb-2">
+            <img src="img/gráfico_2.png" class="w-100 mb-5 grafico" data-aos="fade-up" />
+          </div>
         </div>
         <div class="title_acordo my-5">
           <h2 data-aos="fade-up">Municípios impactados recebem primeiros projetos</h2>
@@ -179,13 +180,22 @@
           </p>
         </div>
         <div class="text-center justify-content-center first-cite d-flex second-cite py-5">
-          <blockquote class="w-100" data-aos="fade-up">
+          <blockquote class="w-100" data-aos="fade-up" style="line-height: 1.3;">
             <i class="start-quote fas fa-quote-left"></i>
-            “O processo de escuta dos moradores é fundamental para que a reparação seja efetiva. A partir desse processo
+            O processo de escuta dos moradores é fundamental para que a reparação seja efetiva. A partir desse processo
             realizado junto aos municípios, os compromitentes organizam e avaliam as demandas, a Vale faz um
             planejamento com cronogramas e orçamentos de cada projeto, que serão auditados ao longo de toda a sua
-            execução”, explica Gleuza."
+            execução”
           </blockquote>
+        </div>
+        <div class="row mt-3">
+          <div class="col-lg-2 col-md-0"></div>
+          <div class="col-lg-8 col-md-12">
+            <div class="d-flex text-center justify-content-center first-cite author" data-aos="fade-up">
+              <cite><b>Gleuza Jesué</b>, Gerente Executiva de Reparação e Desenvolvimento da Vale</cite>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-0"></div>
         </div>
       </div>
       <div class="col-lg-2 col-md-0"></div>
@@ -267,8 +277,7 @@
                 <img src="img/ìcones_Gráfico_3/gráfico_3-4.png" class="w-100 fluxo-item-icon" />
               </div>
               <div class="col-9 d-flex">
-                <span>Detalhamento do(s) projeto(s) pela Vale. <span class="fluxo-item-iniciativas">143
-                    iniciativas</span></span>
+                <span>Detalhamento do(s) projeto(s) pela Vale</span>
               </div>
             </div>
           </div>
@@ -372,7 +381,7 @@
               <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
                   <img src="img/ìcones_Grade/grade-3.png" class="projeto-icon" alt="">
-                  <p>Oferta de quase <span class="orange">seis mil vagas</span> para qualificação profissional</p>
+                  <p>Oferta de quase <span class="orange">seis mil vagas para qualificação profissional</span></p>
                 </div>
               </div>
             </div>
@@ -391,7 +400,7 @@
             <div class="col py-3" data-aos="fade-up">
               <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
-                  <img src="img/ìcones_Grade/grade-5.png" class="projeto-icon" alt="">
+                  <img src="img/ìcones_Grade/grade-7.png" class="projeto-icon" alt="">
                   <p>Construção de <span class="orange">um pelotão para o Corpo de Bombeiros</span> em Brumadinho</p>
                 </div>
               </div>
@@ -400,7 +409,7 @@
             <div class="col py-3" data-aos="fade-up">
               <div class="card rounded-4 h-100">
                 <div class="d-flex flex-column h-100 py-3 px-4 text-center">
-                  <img src="img/ìcones_Grade/grade-6.png" class="projeto-icon" alt="">
+                  <img src="img/ìcones_Grade/grade-10.png" class="projeto-icon" alt="">
                   <p><span class="orange">Brumadinho Digital</span> tornando a cidade mais conectada, e <span
                       class="orange">Distrito Industrial</span>, para atração de novos negócios e geração de emprego e
                     renda</p>
@@ -499,9 +508,9 @@
     <div class="row d-flex justify-content-center py-2">
       <div class="col-lg-2 col-md-0"></div>
       <div class="col-lg-8 col-md-12">
-        <div class="row repasses-item d-flex py-2" data-aos="fade-up">
+        <div class="row repasses-item d-flex py-4" style="padding-right: 1rem;" data-aos="fade-up">
           <div class="col-2 repasses-col-3">
-            <img src="img/Ícones_Lista/lista-3.png" class="w-100 repasses-item-icon" />
+            <img src="img/Ícones_Lista/lista-5.png" class="w-100 repasses-item-icon" />
           </div>
           <div class="col-10 d-flex">
             <span>Implantação do Programa de Transferência de Renda (PTR), solução definitiva para os pagamentos
@@ -518,7 +527,7 @@
       <div class="col-lg-8 col-md-12">
         <div class="row repasses-item d-flex py-2" data-aos="fade-up">
           <div class="col-2 repasses-col-3">
-            <img src="img/Ícones_Lista/lista-4.png" class="w-100 repasses-item-icon" />
+            <img src="img/Ícones_Lista/lista-7.png" class="w-100 repasses-item-icon" />
           </div>
           <div class="col-10 d-flex">
             <span>Projetos de <span class="vermelho">Segurança Hídrica</span></span>
