ajuste tag especial publicitario

--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
     </div>
   </div>
   <div class="page-1">
-    <div class="masthead__tag" style="margin: 2rem 0;">
+    <!-- <div class="masthead__tag" style="margin: 2rem 0;">
       <div class="tag">
         Especial Publicitário
       </div>
-    </div>
+    </div> -->
     <div class="banner">
       <div class="row">
         <div class="col-12">
+          <div class="masthead__tag" style="margin: 2rem 0;">
+            <div class="tag">
+              Especial Publicitário
+            </div>
+          </div>
           <div class="title">
             <h1>ACORDO DE REPARAÇÃO POR <b>BRUMADINHO</b></h1>
           </div>
