--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <title>Vale - Acordo de reparação por Brumadinho</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="css/style.css?v=1" />
-  <link rel="stylesheet" href="css/responsive.css?v=1" />
-  <link rel="stylesheet" href="css/barra-globocom.min.css?v=1">
-  <link rel="stylesheet" href="css/barra.css?v=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css?v=1">
+  <link rel="stylesheet" href="css/style.css?v=2" />
+  <link rel="stylesheet" href="css/responsive.css?v=2" />
+  <link rel="stylesheet" href="css/barra-globocom.min.css?v=2">
+  <link rel="stylesheet" href="css/barra.css?v=2">
+  <link rel="stylesheet" href="css/bootstrap.min.css?v=2">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -122,11 +122,11 @@
             <div class="fazer-content">
               <ul>                
                 <li>Programa de Reparação Socioeconômica*</li>
-                <li class="no-bullet">Projetos para Brumadinho (R$ 1,5 Bi)</li>
-                <li class="no-bullet">Projetos para Bacia do Paraopeba (R$ 2,5 Bi)</li>
+                <li>Projetos para Brumadinho (R$ 1,5 Bi)</li>
+                <li>Projetos para Bacia do Paraopeba (R$ 2,5 Bi)</li>
                 <li>Programa de Reparação Socioambiental</li>
-                <li class="no-bullet">Recuperação Socioambiental (sem teto - R$ 5 Bi)</li>
-                <li class="no-bullet">Compensação Socioambiental (R$ 1,55 Bi)</li>
+                <li>Recuperação Socioambiental (sem teto - R$ 5 Bi)</li>
+                <li>Compensação Socioambiental (R$ 1,55 Bi)</li>
                 <li>FUNED e Biofábrica Wolbachia (R$ 135 MM)</li>
                 <li>TAC Defesa Civil e Bombeiros (R$ 168 MM)</li>
               </ul>
@@ -546,8 +546,8 @@
 </body>
 
 <script src="./js/jquery.min.js"></script>
-<script src="js/barra-globocom.min.js?v=1"></script>
-<script src="js/barra.js?v=1"></script>
+<script src="js/barra-globocom.min.js?v=2"></script>
+<script src="js/barra.js?v=2"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
   integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
